# django-payment-cn

./: MANIFEST.in  README.md  README.rst  setup.cfg
django_payment_cn.egg-info/: PKG-INFO  SOURCES.txt
payment/: admin.py  alipay.py  apps.py  douyin.py  models.py  signals.py  tests.py  urls.py  views.py  wechat.py
payment/locale/zh_Hans/LC_MESSAGES/: django.mo  django.po
